--- a/handlers/handlers.yml
+++ b/handlers/handlers.yml
@@ -1,4 +1,5 @@
 ---
 - name: restart graphite-web
-  service: name=diamond state=restarted
-  when: graphite_web_service
+  service:
+    name: "graphite-web"
+    state: restarted
