--- a/tasks/configure/common.yml
+++ b/tasks/configure/common.yml
@@ -5,7 +5,7 @@
     owner: "root"
     mode: 0644
   register: config
-  notify: restart mysql
+  notify: restart graphite-web
   tags:
     - graphite
     - graphite-config
